--- a/index.html
+++ b/index.html
@@ -9,23 +9,21 @@ body{
   margin:0;
   font-family:Arial, sans-serif;
   background:#f6f3ec;
-  overflow:hidden;
 }
+
 section{
-  position:absolute;
-  inset:0;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  transform:translateX(100%);
-  transition:0.5s;
+  display:none;
+  min-height:100vh;
+  padding:40px;
+  text-align:center;
 }
-section.active{transform:translateX(0);}
-section.left{transform:translateX(-100%);}
+
+section.active{
+  display:block;
+}
 
 button{
-  padding:12px 20px;
+  padding:12px 22px;
   border:none;
   background:#ff7a18;
   color:white;
@@ -33,58 +31,109 @@ button{
   border-radius:6px;
   cursor:pointer;
 }
+
+h1{font-size:48px;}
+h2{font-size:32px;}
+
+.card{
+  background:white;
+  padding:20px;
+  margin:15px auto;
+  max-width:300px;
+  border-radius:10px;
+}
+
+img{
+  width:100%;
+  border-radius:10px;
+}
 </style>
 </head>
 
 <body>
 
+<!-- INTRO -->
 <section id="intro" class="active">
   <h1>GaliGyan</h1>
-  <p>Your guide to explore India better</p>
+  <img id="introImg">
+  <p>
+    Discover India better — hidden gems, hotels, food spots,
+    spiritual places and shopping areas.
+  </p>
   <button onclick="go('services')">Explore</button>
+  <br><br>
   <small>Created by Aman Kumar Mishra</small>
 </section>
 
+<!-- SERVICES -->
 <section id="services">
   <h2>Services</h2>
-  <button onclick="go('location')">Choose Location</button>
+
+  <div class="card">
+    <img id="serviceImg">
+    <p>Hidden Gems · Hotels · Spiritual · Food · Shopping</p>
+  </div>
+
+  <button onclick="go('location')">Next</button>
 </section>
 
+<!-- LOCATION -->
 <section id="location">
-  <h2>Location</h2>
+  <h2>Select Location</h2>
   <input placeholder="Enter city">
   <br><br>
+
   <input type="range" min="1" max="100" value="10"
-    oninput="document.getElementById('r').innerText=this.value">
-  <p>Radius: <span id="r">10</span> km</p>
-  <button onclick="go('results')">Next</button>
+    oninput="document.getElementById('radius').innerText=this.value">
+  <p>Radius: <span id="radius">10</span> km</p>
+
+  <button onclick="go('results')">Show Results</button>
 </section>
 
+<!-- RESULTS -->
 <section id="results">
   <h2>Results</h2>
-  <p>Mock results shown here</p>
+  <div class="card">Sample Place 1</div>
+  <div class="card">Sample Place 2</div>
   <button onclick="go('thankyou')">Continue</button>
 </section>
 
+<!-- THANK YOU -->
 <section id="thankyou">
   <h2>Thank You</h2>
+  <img src="https://images.unsplash.com/photo-1524492412937-b28074a5d7da">
+  <p>Thanks for visiting GaliGyan</p>
   <button onclick="go('intro')">Home</button>
 </section>
 
 <script>
-var current="intro";
-
 function go(id){
-  var c=document.getElementById(current);
-  var n=document.getElementById(id);
-  if(!c||!n)return;
-  c.classList.add("left");
-  n.classList.add("active");
-  setTimeout(function(){
-    c.classList.remove("active","left");
-    current=id;
-  },500);
+  document.querySelectorAll("section").forEach(s=>s.classList.remove("active"));
+  document.getElementById(id).classList.add("active");
 }
+
+/* Intro photos */
+const introImages=[
+ "https://images.unsplash.com/photo-1524492412937-b28074a5d7da",
+ "https://images.unsplash.com/photo-1501117716987-c8e1ecb210b7",
+ "https://images.unsplash.com/photo-1548013146-72479768bada"
+];
+
+/* Services photos */
+const serviceImages=[
+ "https://images.unsplash.com/photo-1583248369069-9d91f6e2983c",
+ "https://images.unsplash.com/photo-1566073771259-6a8506099945",
+ "https://images.unsplash.com/photo-1587474260584-136574528ed5",
+ "https://images.unsplash.com/photo-1604908176997-125f25cc6f3d",
+ "https://images.unsplash.com/photo-1582719478250-c89cae4dc85b"
+];
+
+let i=0;
+setInterval(()=>{
+  document.getElementById("introImg").src=introImages[i%introImages.length];
+  document.getElementById("serviceImg").src=serviceImages[i%serviceImages.length];
+  i++;
+},3000);
 </script>
 
 </body>
