--- a/index.html
+++ b/index.html
@@ -5,135 +5,105 @@
 <title>GaliGyan</title>
 
 <style>
-body{
+*{
   margin:0;
+  padding:0;
+  box-sizing:border-box;
   font-family:Arial, sans-serif;
+}
+
+body{
   background:#f6f3ec;
 }
 
-section{
-  display:none;
-  min-height:100vh;
-  padding:40px;
+/* ---------- HERO ---------- */
+.hero{
+  height:100vh;
+  width:100%;
+  position:relative;
+  background-size:cover;
+  background-position:center;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+
+.hero::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:rgba(0,0,0,0.45);
+}
+
+.hero-content{
+  position:relative;
   text-align:center;
-}
-
-section.active{
-  display:block;
-}
-
-button{
-  padding:12px 22px;
-  border:none;
-  background:#ff7a18;
   color:white;
+  padding:20px;
+  max-width:700px;
+}
+
+.hero h1{
+  font-size:42px;
+  margin-bottom:15px;
+}
+
+.hero p{
+  font-size:18px;
+  line-height:1.5;
+  margin-bottom:25px;
+}
+
+.hero button{
+  padding:14px 30px;
   font-size:16px;
-  border-radius:6px;
+  border:none;
+  border-radius:30px;
+  background:linear-gradient(90deg,#6a11cb,#ff006e);
+  color:white;
   cursor:pointer;
 }
 
-h1{font-size:48px;}
-h2{font-size:32px;}
-
-.card{
-  background:white;
-  padding:20px;
-  margin:15px auto;
-  max-width:300px;
-  border-radius:10px;
-}
-
-img{
-  width:100%;
-  border-radius:10px;
+.creator{
+  margin-top:20px;
+  font-size:13px;
+  opacity:0.85;
 }
 </style>
 </head>
 
 <body>
 
-<!-- INTRO -->
-<section id="intro" class="active">
-  <h1>GaliGyan</h1>
-  <img id="introImg">
-  <p>
-    Discover India better — hidden gems, hotels, food spots,
-    spiritual places and shopping areas.
-  </p>
-  <button onclick="go('services')">Explore</button>
-  <br><br>
-  <small>Created by Aman Kumar Mishra</small>
-</section>
-
-<!-- SERVICES -->
-<section id="services">
-  <h2>Services</h2>
-
-  <div class="card">
-    <img id="serviceImg">
-    <p>Hidden Gems · Hotels · Spiritual · Food · Shopping</p>
+<section class="hero" id="hero">
+  <div class="hero-content">
+    <h1>Discover Incredible India with GaliGyan</h1>
+    <p>
+      Your trusted guide to India’s best travel destinations,
+      hotels, spiritual places, food spots and shopping areas.
+    </p>
+    <button>Explore Now</button>
+    <div class="creator">Created by Aman Kumar Mishra</div>
   </div>
-
-  <button onclick="go('location')">Next</button>
-</section>
-
-<!-- LOCATION -->
-<section id="location">
-  <h2>Select Location</h2>
-  <input placeholder="Enter city">
-  <br><br>
-
-  <input type="range" min="1" max="100" value="10"
-    oninput="document.getElementById('radius').innerText=this.value">
-  <p>Radius: <span id="radius">10</span> km</p>
-
-  <button onclick="go('results')">Show Results</button>
-</section>
-
-<!-- RESULTS -->
-<section id="results">
-  <h2>Results</h2>
-  <div class="card">Sample Place 1</div>
-  <div class="card">Sample Place 2</div>
-  <button onclick="go('thankyou')">Continue</button>
-</section>
-
-<!-- THANK YOU -->
-<section id="thankyou">
-  <h2>Thank You</h2>
-  <img src="https://images.unsplash.com/photo-1524492412937-b28074a5d7da">
-  <p>Thanks for visiting GaliGyan</p>
-  <button onclick="go('intro')">Home</button>
 </section>
 
 <script>
-function go(id){
-  document.querySelectorAll("section").forEach(s=>s.classList.remove("active"));
-  document.getElementById(id).classList.add("active");
-}
+/* ---------- HERO IMAGE ROTATION (SAFE) ---------- */
+const hero=document.getElementById("hero");
 
-/* Intro photos */
-const introImages=[
- "https://images.unsplash.com/photo-1524492412937-b28074a5d7da",
- "https://images.unsplash.com/photo-1501117716987-c8e1ecb210b7",
- "https://images.unsplash.com/photo-1548013146-72479768bada"
+const images=[
+  "https://images.unsplash.com/photo-1524492412937-b28074a5d7da",
+  "https://images.unsplash.com/photo-1548013146-72479768bada",
+  "https://images.unsplash.com/photo-1506466010722-395aa2bef877",
+  "https://images.unsplash.com/photo-1587474260584-136574528ed5"
 ];
 
-/* Services photos */
-const serviceImages=[
- "https://images.unsplash.com/photo-1583248369069-9d91f6e2983c",
- "https://images.unsplash.com/photo-1566073771259-6a8506099945",
- "https://images.unsplash.com/photo-1587474260584-136574528ed5",
- "https://images.unsplash.com/photo-1604908176997-125f25cc6f3d",
- "https://images.unsplash.com/photo-1582719478250-c89cae4dc85b"
-];
+let index=0;
+hero.style.backgroundImage="url("+images[0]+")";
 
-let i=0;
-setInterval(()=>{
-  document.getElementById("introImg").src=introImages[i%introImages.length];
-  document.getElementById("serviceImg").src=serviceImages[i%serviceImages.length];
-  i++;
-},3000);
+setInterval(function(){
+  index=(index+1)%images.length;
+  hero.style.backgroundImage="url("+images[index]+")";
+},4000);
 </script>
 
 </body>
